config/networkpolicy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: openshift-marketplace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
